			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02k: *********************************

BUG: (04/06/05, SMR) IRSIM crashes (Bug #242).
FIX: In Sim.connectTransistors(), use "baseType()" when extracting node type.

IMP/MAN: (04/06/05, JKG) Added IRSIM option to use delayed X propogation.
    Implemented delayed X propogation in code.

BUG: (04/05/05, GVG) Coordinates cut off in status bar on Mac (Bug #229)
FIX: Add insets according to platform.

IMP: (04/04/05, DN) Method "TextDescriptor.setParam" removed because
   TextDescriptor is intended to become immutable.

BUG: (04/04/05, DN) When a circular library dependency forbids a new
    instance to be created, it corrupts the database (Bug #237)
FIX: On failure Cell.addNode returns -1 now, which prevents
    NodeInst.lowLevelLink from linking.

************************* Version 8.02j: *********************************

IMP: (04/02/05, SMR) Added "outlined patterned" drawing to PixelDrawing.java.

BUG: (04/01/05, RK) regressions: I removed Compaction regression from run.sh because that regression always fails

IMP: (04/01/05, RK) NCC: added regression test for multiple hierarchy scan

BUG: (04/01/05, RK) NCC: CompareList must always have something from both designs

BUG: (03/31/05, GVG) Class exception while dragging cells from ExplorerTree into EditWindow on Mac (Bug #235)
FIX: DataFlavor constructor changed. Now using DataFlavor(MyClass.class, String)

BUG: (03/31/05, GVG) Exception in Explorer while dragging on whitespace on Mac OS X (Bug #232)
FIX: add image to DragSource.startDrag (only for Mac)

IMP: (03/31/05, GVG) Improvements in lights, transparency/Z buffer handling after discussion with Java3D team.

BUG: (03/31/05, GVG) Cell expansion with several sublevels was not working.
FIX: Using rotateOutAboutTrueCenter instead of rotateOut
