@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02k: *********************************
 
+BUG: (04/06/05, GVG) Parasitic tool was wrongly ignoring active layers in HierarchyEnumator call
+FIX: Use correct netlist
+
 BUG: (04/06/05, SMR) IRSIM crashes (Bug #242).
 FIX: In Sim.connectTransistors(), use "baseType()" when extracting node type.
 
